Avoid jump

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -339,7 +339,7 @@ h3 {
 }
 
 #coming-soon {
-  min-height: 400px;
+  min-height: 600px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 2fr 1fr 1fr;
@@ -629,6 +629,10 @@ article {
 
 #news-more-switch {
   text-align: center;
+
+  h2 + & {
+    margin-top: -60px;
+  }
 
   .btn-news-more {
     margin: 0 auto 15px;
